<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reverse_page"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context="com.example.picmymedcode.View.SignUpActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/edit_profile"
        android:textColor="#515050"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/enteredPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_with_outline"
        android:padding="20dp"
        android:text="@string/Phone_Number"
        android:textColor="#16BBE5" />

    <EditText
        android:id="@+id/enteredEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enteredPhone"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_with_outline"
        android:padding="20dp"
        android:text="@string/Email"
        android:textColor="#16BBE5" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enteredEmail"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/signupbtn1"
        android:paddingHorizontal="20dp"
        android:text="@string/Update_Profile"


        />
</RelativeLayout>