<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context="com.example.picmymedcode.View.newUsernameActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/Pick_Username"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/enteredUID"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enteredPhone"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/Username" />

    <EditText
        android:id="@+id/enteredPhone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enteredEmail"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/Phone_Number" />

    <EditText
        android:id="@+id/enteredEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpButton"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="Email" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_box"
        android:gravity="center"
        android:text="@string/Lets_Start" />
</RelativeLayout>