...


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/patientButton"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="50dp"
        android:text="@string/are_you_a"
        android:textSize="25sp" />

...
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_box"
        android:gravity="center"
        android:text="@string/patient" />

    <Button
        android:id="@+id/careProviderButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patientButton"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
...
