...
        android:gravity="center"
        android:hint="@string/user_id"
        android:textColor="#16BBE5"
        android:textColorHint="#16BBE5" />

    <Button
        android:id="@+id/loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enteredUID"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
...
